[tool.poetry]
name = "pythonproject cwi1"
version = "0.1.0"
description = ""
authors = ["mdrozdzal <maciej.drozdzal@comarch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
chainmap = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
